removed footer padding to correct empty space created on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -88,7 +88,7 @@ a.navbar-item:hover
   padding: 0 1rem
 
 footer.footer
-  padding: 3rem 0rem 0rem
+  padding: 0rem 0rem 0rem
   background-color: transparent
 
 //Menu overrides
